--- a/exampletemplate.tex
+++ b/exampletemplate.tex
@@ -5,7 +5,7 @@ fromrule=false]{scrlttr2}
 
 \usepackage{ngerman}
 \usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+%\usepackage[T1]{fontenc}
 \usepackage{textcomp}
 \usepackage{longtable}
 \usepackage{eurosym}
