Added Subtotal and Total calculations to the compiler. Also added dynamic compiling functionality

--- a/exampletemplate.tex
+++ b/exampletemplate.tex
@@ -67,7 +67,7 @@ Pos. & Bezeichnung & Menge & ME & Einzelpreis & Gesamtpreis\\
 \begin{longtable}{p{5.5cm}p{2.5cm}p{2.5cm}p{2cm}p{3cm}}
 \hline Nettobetrag Gesamt & 19\% MwSt. & Versand & Verpackung & Bruttobetrag\\
 \hline 
-0,00 \euro{} & 0,00 \euro & 0,00 \euro & 0,00 \euro & 0,00 \euro{}\\
+<document.total.nett> \euro{} & <document.total.tax> \euro & <document.total.shipping> \euro & <document.total.packing> \euro & <document.total.gross> \euro{}\\
 \hline\hline 	
 \end{longtable}
 
